crates/action-graph/tests/snapshots/action_graph_test__action_graph__run_task_dependencies__can_create_a_chain.snap
---
source: crates/action-graph/tests/action_graph_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace" ]
    1 [ label="SyncProject(deps)" ]
    2 [ label="RunTask(deps:chain1)" ]
    3 [ label="RunTask(deps:chain2)" ]
    4 [ label="RunTask(deps:chain3)" ]
    1 -> 0 [ ]
    4 -> 1 [ ]
    3 -> 1 [ ]
    3 -> 4 [ ]
    2 -> 1 [ ]
    2 -> 3 [ ]
}
