crates/action-graph/tests/snapshots/action_graph_test__action_graph__run_task_dependencies__doesnt_include_dependents.snap
---
source: crates/action-graph/tests/action_graph_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace" ]
    1 [ label="SyncProject(deps)" ]
    2 [ label="RunTask(deps:base)" ]
    1 -> 0 [ ]
    2 -> 1 [ ]
}
