crates/action-graph/tests/snapshots/action_graph_test__action_graph__run_task_dependencies__includes_dependents.snap
---
source: crates/action-graph/tests/action_graph_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace" ]
    1 [ label="SetupToolchain(system)" ]
    2 [ label="SyncProject(system, deps)" ]
    3 [ label="RunTask(deps:base)" ]
    4 [ label="RunTask(deps:parent2)" ]
    5 [ label="RunTask(deps:parent1)" ]
    6 [ label="SyncProject(system, deps-external)" ]
    7 [ label="RunTask(deps-external:external)" ]
    1 -> 0 [ ]
    2 -> 1 [ ]
    3 -> 2 [ ]
    4 -> 2 [ ]
    4 -> 3 [ ]
    5 -> 2 [ ]
    5 -> 3 [ ]
    6 -> 1 [ ]
    6 -> 2 [ ]
    7 -> 6 [ ]
    7 -> 3 [ ]
}
