crates/action-graph/tests/snapshots/action_graph_test__action_graph__run_task_dependencies__includes_dependents_for_ci.snap
---
source: crates/action-graph/tests/action_graph_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace" ]
    1 [ label="SyncProject(deps)" ]
    2 [ label="RunTask(deps:base)" ]
    3 [ label="RunTask(deps:parent2)" ]
    4 [ label="RunTask(deps:parent1)" ]
    5 [ label="SyncProject(deps-external)" ]
    6 [ label="RunTask(deps-external:external)" ]
    1 -> 0 [ ]
    2 -> 1 [ ]
    3 -> 1 [ ]
    3 -> 2 [ ]
    4 -> 1 [ ]
    4 -> 2 [ ]
    5 -> 0 [ ]
    5 -> 1 [ ]
    6 -> 5 [ ]
    6 -> 2 [ ]
}
