crates/action-graph/tests/snapshots/action_graph_test__action_graph__run_task_dependencies__runs_deps_in_parallel.snap
---
source: crates/action-graph/tests/action_graph_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace" ]
    1 [ label="SyncProject(deps)" ]
    2 [ label="RunTask(deps:parallel)" ]
    3 [ label="RunTask(deps:c)" ]
    4 [ label="RunTask(deps:a)" ]
    5 [ label="RunTask(deps:b)" ]
    1 -> 0 [ ]
    3 -> 1 [ ]
    4 -> 1 [ ]
    5 -> 1 [ ]
    2 -> 1 [ ]
    2 -> 3 [ ]
    2 -> 4 [ ]
    2 -> 5 [ ]
}
